# Machine-Learning

./: .gitignore  LICENSE  README.md
C# NN/: FileManager.cs  MNISTReader.cs  Mathf.cs  Program.cs
Interactive_MNIST_Drawing/: FileIO.java  Java_Harness.pde  README.md  Visualiser-Options.json
ML_NEW/Java_Harness/: Formatter.java  Java_Harness.pde  Matrix.java  NN.java  NN1.json  NN_100_50.json  NN_Big.json  Visualiser-Options.json  mat.json  net_20_20.json  network_trained.json
ML_NEW/Java_Harness/src/MNIST_Visualiser/: Formatter.java  MNIST_Visualiser.pde
ML_NEW/NN/: NN.sln
ML_NEW/NN/NN/: EnumerableExtensions.cs  FileManager.cs  Layer.cs  MNISTOptimiser.cs  MNISTReader.cs  Mathf.cs  Matrix.cs  NeuralNetwork.cs  Program.cs  UI.cs
ML_NEW/NeuralNetwork/: CLASS_UML.uxf  CMakeLists.txt  Layer.cpp  Layer.hpp  Main.cpp  Matrix.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Neuron.cpp  Neuron.hpp
ML_NEW/NeuralNetwork/test/: CMakeLists.txt  Layer_Tests.cpp  Matrix_Tests.cpp  NN_Tests.cpp  Neuron_Tests.cpp
NN/: .editorconfig  1blxv5sr.hk3~  FileManager.cs  Layer.cs  LogViewer.py  MNISTOptimiser.cs  Mathf.cs  Matrix.cs  NN.csproj  NN.sln  NeuralNetwork.cs  Program.cs  UI.cs
NN/NN.UnitTests/: MathfUnitTests.cs  MatrixUnitTests.cs  NN.UnitTests.csproj  NeuralNetworkUnitTests.cs
NN/NN.UnitTests/Properties/: AssemblyInfo.cs
NN/Properties/: AssemblyInfo.cs
